expected/main/gens/gen-same-ref1.err
ERROR: "actual/main/gens/gen-same-ref1.lc", line 3
external putchar {putchar} :: Word -> Proc Unit
         ^
External putchar is implemented by a primitive of the same name so cannot be declared as an entrypoint.

ERROR: "actual/main/gens/gen-same-ref1.lc", line 6
external getchar {getchar} :: Proc Word
         ^
External getchar is implemented by a primitive of the same name so cannot be declared as an entrypoint.

ERROR: Aborting after 2 previously reported errors

